- Fix compatibility with Net_SMTP > 1.6.3 and Mail_Mime >= 1.9.0
- Fix SQL error on logout when using session_storage=php (#1490421)
- Fix so plain text signature field uses monospace font (#1490435)
- Fix draft removal after a message is sent and storing sent message is disabled (#1490467)
- Fix handling of plus character in mailto: links (#1490510)

RELEASE 1.0.6
-------------
- Make SMTP error log more verbose - include server response and error code
- Fix rows count when messages search fails (#1490266)
- Fix security issue in DBMail driver of password plugin (#1490261)
- Fix handling of some improper constructs in format=flowed text as per the RFC3676[4.5] (#1490284)
- Fix missing or not up-to-date CATEGORIES entry in vCard export (#1490277)
- Fix duplicate entry on timezones list in rcube_config::timezone_name_from_abbr() (#1490293)
- Fix handling of %-encoded entities in mailto: URLs (#1490346)
- Fix bug where messages count was not updated after message move/delete with skip_deleted=false (#1490372)
- Fix security issue in contact photo handling (#1490379)
- Fix bug where database_attachments_cache setting was not working
- Fix attached file path unsetting in database_attachments plugin (#1490393)
- Fix issues when using moduserprefs.sh without --user argument (#1490399)

RELEASE 1.0.5
-------------
- Fix bug where some valid text in a message was handled as uuencoded attachment
- Fix wrong icon for download button in classic skin
- Fix bug where sent message was saved in Sent folder even if disabled by user (#1490208)
- Fix checks based on window.ActiveXObject in IE > 10
- Fix XSS issue in style attribute handling (#1490227)
- Fix bug where Drafts list wasn't updated on draft-save action in new window (#1490225)
- Fix so "set as default" option is hidden if identities_level > 1 (#1490226)
- Fix bug where search was reset after returning from compose visited for reply
- Fix javascript error in "IE 8.0/Tablet PC" browser (#1490210)