@@ -7,6 +7,7 @@ CHANGELOG Roundcube Webmail
 - Fix so plain text signature field uses monospace font (#1490435)
 - Fix draft removal after a message is sent and storing sent message is disabled (#1490467)
 - Fix handling of plus character in mailto: links (#1490510)
+- Fix so gc.sh script removes also expired sessions from sql database (#1490512)
 
 RELEASE 1.0.6
 -------------
